--- a/coffee_project/src/main/resources/templates/sample.html
+++ b/coffee_project/src/main/resources/templates/sample.html
@@ -23,6 +23,8 @@
 
 <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
 
+ <a th:href="@{/product/detail/{id}(id=${product.productId})}" class="btn btn-primary"><i
+            class="fa-solid fa-circle-info"></i></a>
 
 <div class="table-responsive">
     <table class="table table-hover">
