--- a/coffee_project/src/main/resources/templates/user/update.html
+++ b/coffee_project/src/main/resources/templates/user/update.html
@@ -106,7 +106,7 @@
                                     th:errors="*{userEmail}"></td>
                             </tr>
                             <tr>
-                                <th>Giấy tờ tuỳ thân<span style="color: red">*</span></th>
+                                <th>Căn cước công dân<span style="color: red">*</span></th>
                                 <td><input class="form-control" th:field="*{userIdCard}"></td>
                                 <td style="color: red" th:if="${#fields.hasErrors('userIdCard')}"
                                     th:errors="*{userIdCard}"></td>
