--- a/coffee_project/src/main/resources/templates/user/create.html
+++ b/coffee_project/src/main/resources/templates/user/create.html
@@ -9,6 +9,7 @@
         td {
             padding-right: 30px;
         }
+
         #dnd {
             height: 300px;
             display: flex;
@@ -28,13 +29,10 @@
         .preview-img {
             width: 100%;
             height: 100%;
-            /*margin: 0 1em 1em 0;*/
             padding: 0.5em;
-            /*border: 1px solid #ccc;*/
-            /*border-radius: 3px;*/
-
             display: inline-block;
         }
+
     </style>
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
@@ -48,105 +46,161 @@
 
 
             <!---------------BODY---------------------------------------------------------------------------------------->
-            <h1 style="text-align: center;margin-bottom: 20px">Đăng kí thông tin nhân viên</h1>
+            <div class="row" style="margin-top: 15px;margin-bottom: 20px">
+                <a th:href="@{/user/list}" style="text-decoration: none"
+                   class="col-1">
+                    <button class="btn btn-primary ">Quay laij</button>
+                </a>
+
+                <h1 class="col-11" style="text-align: center">Đăng kí thông tin nhân viên</h1>
+
+            </div>
             <form th:object="${userDto}" method="post" th:action="@{/user/create}">
 
 
                 <!---------//Drag and Drop------------------------------>
 
                 <div class="row d-flex ">
-                <div class="col-4">
-                <div id="dnd" class="preview" style="margin-top: 15px">
-                    <img style="margin-left: 40px">Thả ảnh vào đây
+                    <div class="col-4">
+                        <div id="dnd" class="preview" style="margin-top: 15px">
+                            <span style="margin-left: 40px">Thả ảnh vào đây</span>
+                        </div>
+                        <!--                        <progress id="uploader" value="0" max="100">0%</progress>-->
 
-                </div>
+                    </div>
+                    <progress id="uploader" value="0" max="100">0%</progress>
 
-                    <a th:href="@{/user/list}" style="text-decoration: none;margin-top: 35px" class="btn btn-primary">Quay lại</a>
+                    <!-----------------------//Table đăng kí thông tin------------------------->
 
-<!-----------------------//Table đăng kí thông tin------------------------->
-                </div>
-                <div class="col-8">
-                    <table class="table-responsive">
+                    <div class="col-8">
+                        <table class="table-responsive">
+                            <input id="thumbnailURL" hidden="hidden" th:field="*{userImagePath}">
 
-                        <tr>
-                            <th>Tên nhân viên<span style="color: red">*</span></th>
-                            <td><input  class="form-control" th:field="*{userName}" th:value="${userDto.userName}"></td>
-                            <td style="color: red" th:if="${#fields.hasErrors('userName')}"
-                                th:errors="*{userName}"></td>
-                        </tr>
-                        <tr>
-                            <th>Giới tính<span style="color: red">*</span></th>
-                            <td><input class="form-check-input" type="radio" name="gender" th:field="*{userGender}"
-                                       th:value="true"><span>Nam</span>
-                                <input class="form-check-input" type="radio" name="gender" th:field="*{userGender}"
-                                       th:value="false"><span>Nữ</span>
-                                <input class="form-check-input" type="radio" name="gender" th:field="*{userGender}"
-                                       th:value="null"><span>Khác</span>
-                            </td>
-                            <td style="color: red" th:if="${#fields.hasErrors('userGender')}"
-                                th:errors="*{userGender}"></td>
-                        </tr>
-                        <tr>
-                            <th>Ngày sinh<span style="color: red">*</span></th>
-                            <td><input class="form-control" type="date" th:field="*{userBirthday}"></td>
-                            <td style="color: red" th:if="${#fields.hasErrors('userBirthday')}"
-                                th:errors="*{userBirthday}"></td>
-                        </tr>
-                        <tr>
-                            <th>Số điện thoại<span style="color: red">*</span></th>
-                            <td><input  class="form-control" th:field="*{userPhoneNumber}"></td>
-                            <td style="color: red" th:if="${#fields.hasErrors('userPhoneNumber')}"
-                                th:errors="*{userPhoneNumber}"></td>
-                        </tr>
-                        <tr>
-                            <th>Mail<span style="color: red">*</span></th>
-                            <td><input  class="form-control" th:field="*{userEmail}"></td>
-                            <td style="color: red" th:if="${#fields.hasErrors('userEmail')}"
-                                th:errors="*{userEmail}"></td>
-                        </tr>
-                        <tr>
-                            <th>Giấy tờ tuỳ thân<span style="color: red">*</span></th>
-                            <td><input  class="form-control" th:field="*{userIdCard}"></td>
-                            <td style="color: red" th:if="${#fields.hasErrors('userIdCard')}"
-                                th:errors="*{userIdCard}"></td>
-                        </tr>
-                        <tr>
-                            <th>Lương<span style="color: red">*</span></th>
-                            <td><input  class="form-control" th:field="*{userSalary}" type="number"></td>
-                            <td style="color: red" th:if="${#fields.hasErrors('userSalary')}"
-                                th:errors="*{userSalary}"></td>
-                        </tr>
-                        <tr>
-                            <th>Địa chỉ<span style="color: red">*</span></th>
-                            <td><input  class="form-control" id="a" th:field="*{userAddress}"></td>
-                            <td style="color: red" th:if="${#fields.hasErrors('userAddress')}"
-                                th:errors="*{userAddress}"></td>
-                        </tr>
-                        <tr>
-                            <th>Ca làm việc<span style="color: red">*</span></th>
-                            <td><select id="disabledSelect" class="form-select" th:field="*{employeeType}">
-                                <option th:each="employeeType :${employeeTypeList}"
-                                        th:value="${employeeType.employeeTypeId}"
-                                        th:text="${employeeType.employeeTypeName}"></option>
-                            </select></td>
-                        </tr>
-                        <tr>
-                            <th>Tài khoản đăng kí<span style="color: red">*</span></th>
-                            <td><input  class="form-control" th:field="*{account}"></td>
-                        </tr>
-                        <tr>
+                            <tr>
+                                <th>Tên nhân viên<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
+                                <td>
+                                    <div><input class="form-control" th:field="*{userName}"
+                                                th:value="${userDto.userName}"></div>
+                                    <div style=" height: 20px"><small style="color: red"
+                                                                      th:if="${#fields.hasErrors('userName')}"
+                                                                      th:errors="*{userName}"></small></div>
+                                </td>
+                            </tr>
 
-                            <td><a th:href="@{/user/list}">
-                                <button  class="btn btn-danger" type="reset">Xoá thông tin</button>
-                            </a></td>
-                            <td>
-                                <button style="margin-left: 60px" class="btn btn-primary">Đăng kí</button>
-                            </td>
+                            <tr>
+                                <th>Giới tính<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
+                                <td><input class="form-check-input" type="radio" name="gender"
+                                           th:field="*{userGender}"
+                                           th:value="true"><span>Nam</span>
+                                    <input class="form-check-input" type="radio" name="gender"
+                                           th:field="*{userGender}"
+                                           th:value="false"><span>Nữ</span>
+                                    <div style=" height: 20px"><small style="color: red"
+                                                                      th:if="${#fields.hasErrors('userGender')}"
+                                                                      th:errors="*{userGender}"></small></div>
+                                </td>
 
-                        </tr>
-                    </table>
+                            </tr>
 
-                </div>
+                            <tr>
+                                <th>Ngày sinh<span style="color: red">*</span>
+                                    <div style="height: 20px"></div>
+                                </th>
+                                <td><input class="form-control" style="width: 200px" type="date"
+                                           th:field="*{userBirthday}">
+                                    <div style=" height: 20px"><small style="color: red"
+                                                                      th:if="${#fields.hasErrors('userBirthday')}"
+                                                                      th:errors="*{userBirthday}"></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th>Số điện thoại<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
+                                <td><input class="form-control" th:field="*{userPhoneNumber}">
+                                    <div style=" height: 20px"><small style="color: red"
+                                                                      th:if="${#fields.hasErrors('userPhoneNumber')}"
+                                                                      th:errors="*{userPhoneNumber}"></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th>Mail<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
+                                <td><input class="form-control" th:field="*{userEmail}">
+                                    <div style=" height: 20px"><small style="color: red"
+                                                                      th:if="${#fields.hasErrors('userEmail')}"
+                                                                      th:errors="*{userEmail}"></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th>Căn cước công dân<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
+                                <td><input class="form-control" th:field="*{userIdCard}">
+                                    <div style=" height: 20px"><small style="color: red"
+                                                                      th:if="${#fields.hasErrors('userIdCard')}"
+                                                                      th:errors="*{userIdCard}"></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th>Lương<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
+                                <td><input class="form-control" th:field="*{userSalary}" type="number">
+                                    <div style=" height: 20px"><small style="color: red"
+                                                                      th:if="${#fields.hasErrors('userSalary')}"
+                                                                      th:errors="*{userSalary}"></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th>Địa chỉ<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
+                                <td><input class="form-control" id="a" th:field="*{userAddress}">
+                                    <div style=" height: 20px"><small style="color: red"
+                                                                      th:if="${#fields.hasErrors('userAddress')}"
+                                                                      th:errors="*{userAddress}"></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th>Ca làm việc<span style="color: red">*</span>
+                                    <div style=" height: 20px"></div>
+                                </th>
+                                <td><select id="disabledSelect" class="form-select" th:field="*{employeeType}">
+                                    <option th:each="employeeType :${employeeTypeList}"
+                                            th:value="${employeeType.employeeTypeId}"
+                                            th:text="${employeeType.employeeTypeName}"></option>
+                                </select></td>
+                            </tr>
+
+                            <tr>
+                                <th>Tài khoản đăng kí<span style="color: red">*</span></th>
+                                <td><input class="form-control" th:field="*{account.accountName}"></td>
+                            </tr>
+
+                            <tr>
+
+                                <td></td>
+                                <td>
+                                    <button style="margin-left: 60px" id="submit" class="btn btn-primary">Đăng kí
+                                    </button>
+                                </td>
+
+                            </tr>
+                        </table>
+
+                    </div>
                 </div>
             </form>
 
@@ -162,7 +216,11 @@
         src="../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
 
 <!--                    //file Js Img-->
+<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-storage.js"></script>
 <script>
+
+
     const dndElement = document.querySelector('#dnd')
     const resultElement = document.querySelector('.preview')
     const validImageTypes = ['image/gif', 'image/jpeg', 'image/png']
@@ -181,18 +239,16 @@
         e.preventDefault()
         this.classList.remove('drag-over')
         const files = e.dataTransfer.files;
-        for (var i = 0; i < files.length; i++) {
-            const file = files[i]
-            renderPreviewImage(file)
-        }
+        const file = files[0];
+        renderPreviewImage(file)
+
     })
 
     function renderPreviewImage(file) {
         const fileType = file['type']
 
         if (!validImageTypes.includes(fileType)) {
-            resultElement.insertAdjacentHTML(
-                'beforeend',
+            resultElement.insertAdjacentHTML('beforeend',
                 '<span class="preview-img">Chọn ảnh đi :3</span>'
             )
             return
@@ -202,15 +258,47 @@
         fileReader.readAsDataURL(file)
 
         fileReader.onload = function () {
-            const url = fileReader.result
-            resultElement.innerHTML = `<img src="${url}" alt="${file.name}" class="preview-img" />`
+            const url = fileReader.result;
+            resultElement.innerHTML = `<img src="${url}" alt="${file.name}" class="preview-img" />`;
+            pushImage(file)
         }
+
     }
 
+    const firebaseConfig = {
+        apiKey: "AIzaSyDFIFtviHbm8hKCtidU9nVSlcD9fcQSvN4",
+        authDomain: "employeecasestudy.firebaseapp.com",
+        projectId: "employeecasestudy",
+        storageBucket: "employeecasestudy.appspot.com",
+        messagingSenderId: "562015708192",
+        appId: "1:562015708192:web:07cf40d25a6339b95d0845",
+        measurementId: "G-CGWJ0KZSJM"
+    };
+    firebase.initializeApp(firebaseConfig);
+
+    function pushImage(file) {
+
+        let storageRef = firebase.storage().ref('img/' + file.name);
+        let task = storageRef.put(file);
+        task.on('state_changed', function progress(snapshot) {
+            let percentage = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+            uploader.value = percentage;
+            //  lúc chưa load xong thì thì ko cho submit
+            if (percentage === 100) {
+                document.getElementById('submit').removeAttribute('disabled');
+            } else {
+                document.getElementById('submit').setAttribute('disabled', 'disabled');
+            }
+        });
+        //   getDownloadURL() để lấy URL của file đã được lưu trữ trên Firebase Storage.
+        task.then(snapshot => snapshot.ref.getDownloadURL())
+            .then(url => {
+                document.getElementById('thumbnailURL').value = url;
+            });
+    }
+
+
 </script>
-
-
-
 
 </body>
 </html>
