--- a/coffee_project/src/main/resources/templates/product/list.html
+++ b/coffee_project/src/main/resources/templates/product/list.html
@@ -7,12 +7,17 @@
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <style>
+        .table td, .table th {
+            vertical-align: middle;
+        }
+
         #success {
             position: fixed;
             right: 1em;
         }
 
         .tin {
+            color: white;
             contain: layout;
             display: flex;
             align-items: center;
@@ -24,7 +29,7 @@
             max-height: 70px;
             box-shadow: 0 5px 8px rgba(36, 245, 10, 0.08);
             animation: slideInLeft ease 2s, fadeOut linear 1s 2s forwards;
-            transition: all linear 0.5s;
+            transition: all linear 0.3s;
         }
 
         table {
@@ -38,75 +43,206 @@
             border-bottom: 1px solid #ddd;
         }
 
-        .card {
-            margin: 10px;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-            transition: 0.3s;
+        @media screen and (max-width: 768px) {
+            th, td {
+                display: block;
+            }
+
+            th {
+                text-align: center;
+                font-weight: bold;
+            }
+
+            td:before {
+                content: attr(data-label);
+                float: left;
+                text-transform: uppercase;
+                font-weight: bold;
+            }
         }
 
-        .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+        input {
+            border: 1px solid #007bff;
+            font-size: 15px;
+            border-radius: 5px;
         }
 
-        .card-body {
+        select {
+            width: 250px;
+            padding: 5px;
+            font-size: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        form {
             display: flex;
-            flex-direction: column;
-            /*align-items: center;*/
-            /*justify-content: center;*/
-            height: 200px;
+            align-items: center;
         }
 
-        /*.card-text {*/
-        /*    text-align: center;*/
-        /*}*/
+        form input[type="text"],
+        form select {
+            width: 100%;
+            padding: 0.5rem;
+            margin-right: 1rem;
+        }
+
+        form button[type="submit"] {
+            padding: 0.5rem 1rem;
+        }
+
+        #next {
+            font-size: 1.5em;
+            color: #333;
+            transition: font-size 0.2s ease-in-out;
+        }
+
+        #next:hover {
+            font-size: 2em;
+            color: #007bff;
+        }
+
+        #next1 {
+            font-size: 1.5em;
+            color: #333;
+            transition: font-size 0.2s ease-in-out;
+        }
+
+        #next1:hover {
+            font-size: 2em;
+            color: #007bff;
+        }
     </style>
+    <style th:insert="/layout::style"></style>
+    <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
+          href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
 </head>
 <body>
-<h1>Danh sách sản phẩm</h1>
-<span th:if="${msg}!=null" th:text="${msg}" id="success"
-      class="tin"
-      style="float: left; background-color: rgba(97,139,234,0.87);font-size: 20px"></span>
-<form action="/product/search" method="post">
-    <input type="text" name="name" placeholder="nhập tên sản phẩm ">
-    <select name="productType">
-        <option value="" selected disabled>-- Chọn loại sản phẩm --</option>
-        <option th:each="productType : ${productTypes}"
-                th:value="${productType.productTypeId}" th:text="${productType.productTypeName}"></option>
-    </select>
-    <select name="price">
-        <option value="" selected disabled>-- Chọn giá sản phẩm --</option>
-        <option th:each="price : ${prices}" th:value="${price}" th:text="${price}"></option>
-    </select>
-    <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i>
-    </button>
-</form>
-<a href="/product/create" style="color: white">
-    <button title="Thêm mới sản phẩm"
-            class="btn btn-primary">
-        <i class="fa-solid fa-plus"></i></button>
-</a>
-<!--<i-->
-<!--        class="fa-solid fa-plus"></i></a>-->
-
-<div class="row">
-    <div th:each="product,status: ${products}" class="col-md-3">
-        <div class="card" style="width: 18rem;">
-            <img th:src="${product.productImagePath}" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 th:text="${product.productName}" class="card-title"></h5>
-                <p th:text="${product.productDescription}" class="card-text"></p>
-                <p th:text="${product.productType.productTypeName}" class="card-text"></p>
-                <p th:text="${product.productPrice} +'vnđ'" class="card-text"></p>
-                <!--                <div class="d-flex justify-content-between w-100">-->
-                <a href="#" class="btn btn-primary">Chọn</a>
-                <!--                </div>-->
+<div th:replace="layout::nav"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div th:replace="layout::content1"></div>
+        <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
+            <h1 style="text-align: center">Quản lý sản phẩm</h1>
+            <span th:if="${msg}!=null" th:text="${msg}" id="success"
+                  class="tin"
+                  style="float: left; background-color: rgba(97,139,234,0.87);font-size: 20px"></span>
+            <div class="row">
+                <a class="col-1" href="/product/create" style="color: white">
+                    <button title="Thêm mới sản phẩm"
+                            class="btn btn-primary">
+                        <i class="fa-solid fa-plus"></i></button>
+                </a>
+                <span class="col-4"></span>
+                <form class="col-7" action="/product/search" method="post">
+                    <select name="productType">
+                        <option value="" selected>-- Chọn loại sản phẩm --</option>
+                        <option th:each="productType : ${productTypes}"
+                                th:value="${productType.productTypeId}"
+                                th:text="${productType.productTypeName}"></option>
+                    </select>
+                    <select name="price">
+                        <option value="" selected>-- Chọn giá sản phẩm --</option>
+                        <option th:each="price : ${prices}" th:value="${price}" th:text="${price}+' VNĐ'"></option>
+                    </select>
+                    <input type="text" name="name" placeholder="nhập tên sản phẩm ">
+                    <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i>
+                    </button>
+                </form>
+            </div>
+            <div class="table-responsive">
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th>STT</th>
+                        <th>Hình ảnh</th>
+                        <th>Tên sản phẩm</th>
+                        <th>Loại sản phẩm</th>
+                        <th>Giá</th>
+                        <th>Chi tiết</th>
+                        <th>Xóa</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="product,status: ${products}">
+                        <td th:text="${status.count}"></td>
+                        <td><img th:src="${product.productImagePath}" alt="product image" width="100"></td>
+                        <td th:text="${product.productName}">Product Name</td>
+                        <td th:text="${product.productType.productTypeName}">Product Type</td>
+                        <td th:text="${#numbers.formatDecimal(product.productPrice, 0, 'COMMA', 0, 'POINT')} +' VNĐ'"
+                            class="card-text">Product Price
+                        </td>
+                        <div class="d-flex justify-content-between">
+                            <td>
+                                <a th:href="@{/product/detail/{id}(id=${product.productId})}" class="btn btn-primary"><i
+                                        class="fa-solid fa-circle-info"></i></a>
+                            </td>
+                            <td>
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                        data-bs-target="#exampleModal"
+                                        th:data-p1="${product.productId}" th:data-p2="${product.productName}"
+                                        th:data-p3="${product.productId}"
+                                        onclick="showInfo(this.getAttribute('data-p1'), this.getAttribute('data-p2'), this.getAttribute('data-p3'))">
+                                    <i class="fa-regular fa-trash-can"></i>
+                                </button>
+                            </td>
+                        </div>
+                    </tr>
+                    </tbody>
+                </table>
+                <div style="text-align: center">
+                    <a id="next" th:if="${products.hasPrevious()}" th:href="@{/product/(page=${products.number-1})}"><i
+                            class="fas fa-backward"></i></a>
+                    <!--            <span th:text="${products.number+1}"></span>/ <span th:text="${products.totalPages}"></span>-->
+                    <a id="next1" th:if="${products.hasNext()}" th:href="@{/product/(page=${products.number+1})}"><i
+                            class="fas fa-forward"></i></a>
+                </div>
+            </div>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                 aria-hidden="true">
+                <form action="/product/delete" method="post">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Xóa sản phẩm</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <input type="hidden" id="id" name="id">
+                                Bạn có chắc chắn muốn xóa sản phẩm
+                                <span style="color: red" id="name"> </span>
+                                có id là: <span style="color: red" id="idDelete"></span> ?
+                                <p style="color: red">Hoạt động này không thể hoàn tác! </p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+                                <button type="submit" class="btn btn-primary">Xóa</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
 </div>
+<div th:replace="layout::footer"></div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
+<script th:inline="javascript">
+    function showInfo(id, name, idDelete) {
+        document.getElementById("id").value = id;
+        document.getElementById("name").innerText = name;
+        document.getElementById("idDelete").innerText = idDelete;
+    }
 
+    setTimeout(function () {
+        document.getElementById("success").style.display = "none";
+    }, 1000);
+</script>
 </body>
 </html>
